--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
       <div class="outer">
 
         <h1 class="headline">Huskies pick 'em</h1>
-        <h2 class="subhead">How will UW do in 2018?</h2>
+        <h2 class="subhead">How will UW do in 2019?</h2>
         <p class="chatter">
-          Chris Petersen has led Washington to Fiesta Bowl and College Football Playoff appearances in consecutive seasons, but they've ended in losses each year. With Jake Browning, Myles Gaskin and one of the nation's top defenses, is this the year everything comes together for the Huskies? Put your football knowledge to the test by picking the winner of each game this season, then see how your preseason picks stack up against our experts at The Seattle Times.
+          Jake Browning and Salvon Ahmed are gone. Jimmy Lake's defense is reloaded again. After winning the quarterback battle, what can Jacob Eason do in his first season behind center for the Huskies? Make your predictions below and compare with our experts.
         </p>
 
         <div class="container">
@@ -77,7 +77,7 @@
               </ul>
           </div>
           <div class="tooltip">
-            <h1> Huskies 2017-2018 </h1>
+            <h1> Huskies 2019 </h1>
             <div class="content">
               <div class="summary"> Your record prediction:<div class="record"> 0-0 </div> </div>
               <div class="show-experts button">See staff record predictions</div>
