--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <h1 class="headline">Huskies pick 'em</h1>
         <h2 class="subhead">How will UW do in 2019?</h2>
         <p class="chatter">
-          Jake Browning and Salvon Ahmed are gone. Jimmy Lake's defense is reloaded again. After winning the quarterback battle, what can Jacob Eason do in his first season behind center for the Huskies? Make your predictions below and compare with our experts.
+          Jake Browning and Myles Gaskin are gone. Jimmy Lake's defense is reloaded again. After winning the quarterback battle, what can Jacob Eason do in his first season behind center for the Huskies? Make your predictions below and compare with our experts.
         </p>
 
         <div class="container">
